Fix label formatting for task checkboxes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title> To-Do Dashboard</title>
+  <title>To-Do Dashboard</title>
   <link rel="stylesheet" href="todo.css" />
 </head>
 <body>
@@ -42,7 +42,7 @@
 
       <ul class="task-list">
         <li>
-          <label><input type="checkbox"> Review pull requests</label>
+          <label><input type="checkbox" /> Review pull requests</label>
           <span class="date">Created: Today 3:00 PM</span>
           <div class="actions">
             <button class="edit">✏️</button>
@@ -50,7 +50,9 @@
           </div>
         </li>
         <li>
-          <label><input type="checkbox"> Complete project documentation</label>
+          <label
+            ><input type="checkbox" /> Complete project documentation</label
+          >
           <span class="date">Created: Today 1:00 PM</span>
           <div class="actions">
             <button class="edit">✏️</button>
@@ -58,7 +60,7 @@
           </div>
         </li>
         <li class="completed">
-          <label><input type="checkbox" checked> Morning team standup</label>
+          <label><input type="checkbox" checked /> Morning team standup</label>
           <span class="date">Created: Yesterday 4:00 PM</span>
           <div class="actions">
             <button class="edit">✏️</button>
@@ -66,7 +68,7 @@
           </div>
         </li>
         <li>
-          <label><input type="checkbox"> Prepare presentation slides</label>
+          <label><input type="checkbox" /> Prepare presentation slides</label>
           <span class="date">Created: Friday 4:00 PM</span>
           <div class="actions">
             <button class="edit">✏️</button>
@@ -74,7 +76,7 @@
           </div>
         </li>
         <li>
-          <label><input type="checkbox"> Update client portfolio</label>
+          <label><input type="checkbox" /> Update client portfolio</label>
           <span class="date">Created: Tuesday 4:00 PM</span>
           <div class="actions">
             <button class="edit">✏️</button>
@@ -82,7 +84,9 @@
           </div>
         </li>
         <li>
-          <label><input type="checkbox"> Code review for feature branch</label>
+          <label
+            ><input type="checkbox" /> Code review for feature branch</label
+          >
           <span class="date">Created: 2nd Sept 2025</span>
           <div class="actions">
             <button class="edit">✏️</button>
@@ -90,7 +94,7 @@
           </div>
         </li>
         <li class="completed">
-          <label><input type="checkbox" checked> Submit timesheet</label>
+          <label><input type="checkbox" checked /> Submit timesheet</label>
           <span class="date">Created: 1st Sept 2025</span>
           <div class="actions">
             <button class="edit">✏️</button>
@@ -98,7 +102,7 @@
           </div>
         </li>
         <li class="completed">
-          <label><input type="checkbox" checked> Weekly project sync</label>
+          <label><input type="checkbox" checked /> Weekly project sync</label>
           <span class="date">Created: 31st Aug 2025</span>
           <div class="actions">
             <button class="edit">✏️</button>
@@ -108,5 +112,5 @@
       </ul>
     </div>
   </div>
-</body>
+  </body>
 </html>
